# BFMMBOT

./: .env.example  .gitignore  README.md  REPO_ID.txt  Stall‑Then‑Strikekessai .txt  canceladdgatekessai.txt  engine_orig.py  log  memo.txt  poetry.toml  pyproject.toml  run_paper_guard_ok.ps1  run_paper_tmp.py  tastws.py  tmp.bytes  tmp_block.txt  tmp_cap_fn.txt  tmp_chunk.txt  tmp_engine_ar.txt  tmp_engine_ar2.txt  tmp_engine_ar3.txt  tmp_engine_close_only.txt  tmp_engine_close_only2.txt  tmp_engine_close_only3.txt  tmp_engine_close_only4.txt  tmp_engine_invfeat.txt  tmp_engine_stale.txt  tmp_inv_cap_fn.txt  tmp_live_slice.py  tmp_mp_test.py  tmp_old.txt  tmp_risk_gate.txt  tmp_risk_gate2.txt  tmp_sleep.py
.github/workflows/: ci.yml
configs/: backtest.yml  base.yml  live.yaml  live.yml  paper.yml  zero_reopen_live.example.yml  zero_reopen_paper.example.yml
docs/: CODEX_ZERO_REOPEN_POP.md  HANDOFF_SNAPSHOT.md  HANDOFF_TEMPLATE.md  RUNBOOK.md  STRATEGIES.md  WORKFLOW_CFD.md
scripts/: dev_trade.bat  run_real_logs.ps1  run_zero_reopen_live.sh  run_zero_reopen_paper.sh
src/: __init__.py  _date_stamped_logs.py
src/analytics/: __init__.py  session_kpi.py
src/backtest/: __init__.py  loader.py  runner.py
src/cli/: __init__.py  backtest.py  export.py  health.py  ingest.py  score.py  session_report.py  trade.py
src/core/: __init__.py  analytics.py  exchange.py  logs.py  orderbook.py  orders.py  position_replay.py  realtime.py  recorder.py  risk.py  simulator.py  utils.py
src/features/: __init__.py  queue_eta.py
src/position/: __init__.py
src/runtime/: __init__.py  engine.py  live.py  live_simple.py  paper.py
src/strategy/: __init__.py  age_microprice.py  base.py  cancel_add_gate.py  stall_then_strike.py  zero_reopen_pop.py
tests/: test_smoke.py  test_stall_then_strike.py  test_zero_reopen_pop.py
tools/: __init__.py  analyze_obs.py  check_status.py  monitor_heartbeat.py  run_live_for.ps1
